# cmake_template

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/bar/: CMakeLists.txt
lib/bar/include/: bar.h
lib/bar/src/: bar.cpp
lib/foo/: CMakeLists.txt
lib/foo/include/: foo.h
lib/foo/src/: foo.cpp
src/: CMakeLists.txt  main.cpp
